Negotiation stuff pushed

--- a/index.html
+++ b/index.html
@@ -502,7 +502,8 @@
         <div class="container">
             <h2>Ready to Transform Legal Education?</h2>
             <p>Experience the future of legal mentorship and training</p>
-            <a href="#demo" class="cta-button">Start Demo Journey</a>
+            <a href="negotiations.html" class="cta-button">Start Demo Journey</a>
+            <a href="test-speech.html" class="cta-button" style="background: var(--medium-grey); margin-left: 1rem;">🎤 Test Speech-to-Text</a>
         </div>
     </section>
 
